# genoprot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: quickstart.py
genoprotein/: __init__.py  cli.py
genoprotein/analysis/: __init__.py  bioplausibility.py  folding.py  verification.py
genoprotein/core/: __init__.py  assembly.py  orf.py  sequence.py
genoprotein/decoder/: __init__.py  matcher.py  variant.py
genoprotein/io/: __init__.py  formats.py
genoprotein/repository/: __init__.py  store.py
genoprotein/security/: __init__.py  screener.py
genoprotein/splice/: __init__.py  design.py  operations.py
genoprotein/utils/: __init__.py  databases.py
tests/: test_analysis.py  test_core.py  test_decoder.py  test_io.py  test_repository.py  test_security.py  test_splice.py
